# ckks-gpu-core

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  Run.ipynb
benchmark/: Benchmark.cpp  CMakeLists.txt
cmake/: FindThrust.cmake  FindnvToolsExt.cmake
include/public/: Basic.cuh  Ciphertext.h  Context.h  Define.h  DeviceVector.h  EvaluationKey.h  MemoryPool.h  MultPtxtBatch.h  NttImple.cuh  Parameter.h  Test.h
src/public/: Context.cu  CudaHelper.cu  DeviceVector.cu  MultPtxtBatch.cu  NttImple.cu
unittest/: CMakeLists.txt
unittest/public/: E2ETest.cpp  FusionTest.cpp
